--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.17.9",
+    "@babel/plugin-transform-runtime": "^7.18.2",
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.7",
+    "axios": "^0.27.2",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
     "eslint": "^8.13.0",
@@ -29,6 +31,7 @@
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.6.2",
     "style-loader": "^3.3.1",
+    "typescript": "^4.7.2",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
