--- a/package.json
+++ b/package.json
@@ -29,11 +29,16 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "moment": "^2.29.3",
     "prettier": "^2.6.2",
+    "redux": "^4.2.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.7.2",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2"
   }
 }
